force-app/main/default/objects/Root_Cause_Table__c/Root_Cause_Table__c.object-meta.xml
<CustomObject>
    <description>Defnining Root Cause based on NSS  Category</description>
    <label>Root Cause Table</label>
    <nameField>
        <displayFormat>ROOT-{0000000}</displayFormat>
        <label>Root Cause Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Root Cause Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>