force-app/main/default/objects/Root_Cause_Table__c/fields/NSS_Category__c.field-meta.xml
<CustomField>
    <fullName>NSS_Category__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>NSS Category</label>
    <referenceTo>NSS_Category__c</referenceTo>
    <relationshipLabel>Root_Cause_Table</relationshipLabel>
    <relationshipName>Root_Cause_Table</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>