force-app/main/default/objects/Root_Cause_Table__c/fields/Primary_Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Primary_Root_Cause__c</fullName>
    <description>Defining primary root cause</description>
    <label>Primary Root Cause</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>