force-app/main/default/objects/Root_Cause_Table__c/fields/Secondary_Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Root_Cause__c</fullName>
    <description>Defining secondary root cause</description>
    <label>Secondary Root Cause</label>
    <length>100</length>
    <type>Text</type>
</CustomField>