force-app/main/default/objects/Root_Cause_Table__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NSS_Category__c</columns>
    <columns>Primary_Root_Cause__c</columns>
    <columns>Secondary_Root_Cause__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>